[package]
name = "tolldir"
version = "0.1.0"
authors = ["Alan Marvel <alan@mrvl.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesseract = "0.3.1"

[patch.crates-io]
tesseract = { git = "https://github.com/alanmrvl/tesseract-rs" }
